fix: replace br with gap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,6 +55,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-bottom: 50px;
+  gap: 10px;
 }
 
 .frontpage .footer {
